@@ -525,7 +525,7 @@ class DrupalWebTestCase {
 
     // Add the default teaser.
     if (!isset($settings['teaser'])) {
-      $settings['teaser'] = $settings['body'];      
+      $settings['teaser'] = $settings['body'];
     }
 
     // If the node's user uid is not specified manually, use the currently
@@ -860,6 +860,7 @@ class DrupalWebTestCase {
 
     // Store necessary current values before switching to prefixed database.
     $this->originalPrefix = $db_prefix;
+    $this->originalFileDirectory = file_directory_path();
     $clean_url_original = variable_get('clean_url', 0);
 
     // Must reset locale here, since schema calls t().  (Drupal 6)
@@ -916,8 +917,7 @@ class DrupalWebTestCase {
     variable_set('site_mail', 'simpletest@example.com');
 
     // Use temporary files directory with the same prefix as database.
-    $this->originalFileDirectory = file_directory_path();
-    variable_set('file_directory_path', file_directory_path() . '/' . $db_prefix);
+    variable_set('file_directory_path', $this->originalFileDirectory . '/' . $db_prefix);
     $directory = file_directory_path();
     // Create the files directory.
     file_check_directory($directory, FILE_CREATE_DIRECTORY | FILE_MODIFY_PERMISSIONS);
